--- a/Projeto-redes-sociais/style.css
+++ b/Projeto-redes-sociais/style.css
@@ -32,3 +32,12 @@ section#phone{
 
     background: url(imagens/frame-iphone.png) no-repeat ;
 }
+
+iframe#tela{
+    position: relative;
+    top: 80px;
+    left: 22px;
+
+    width: 268px;
+    height: 472px;
+}
