--- a/Projeto-redes-sociais/style.css
+++ b/Projeto-redes-sociais/style.css
@@ -4,6 +4,7 @@
     padding: 0;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
 }
 
 html, body{
@@ -40,4 +41,19 @@ iframe#tela{
 
     width: 268px;
     height: 472px;
+}
+section#redes img{
+    width: 50px;
+    margin: 10px;
+    border-radius: 20%;
+    transition: all .1s;
+}
+section#redes img:hover{
+    border: 2px solid white;
+    transform: translateY(-8px);
+}
+
+section#redes{
+    padding-top: 60px;
+    text-align: center;
 }
