--- a/media queries/md1/estilos/impressora.css
+++ b/media queries/md1/estilos/impressora.css
@@ -1,3 +1,17 @@
 @charset "utf-8";
 
-/*estilo para impressoras
+/*estilo para impressoras*/
+
+
+*{
+    padding: 20px;
+    margin: 10px;
+}
+html{
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 1.5em;
+    line-height: 1.5em;
+}
+menu{
+    display: none;
+}
