--- a/media queries/md1/estilos/tela.css
+++ b/media queries/md1/estilos/tela.css
@@ -1,3 +1,12 @@
 @charset "utf-8";
 
-/*estilo para telas
+/*estilo para telas*/
+
+*{
+    padding: 10;
+    margin: 10;
+}
+html{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1em;
+}
