pagina que segue a orientação do dispositivo

--- a/media queries/md2/estilos/paisagem.css
+++ b/media queries/md2/estilos/paisagem.css
@@ -1,3 +1,10 @@
 @charset "utf-8";
 
 /* para todos as telas deitadas*/
+
+
+
+body{
+    background-image: url(../images/cev-landscape.jpg);
+    background-position: left bottom;
+}
