--- a/media queries/md2/estilos/style.css
+++ b/media queries/md2/estilos/style.css
@@ -1,3 +1,23 @@
 @charset "utf-8";
 
 /* para todos as telas */
+
+
+*{
+    margin: 0;
+    padding: 0;
+}
+
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    width: 100vw;
+    height: 100vh;
+    background-color: #233EFF;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+h1{
+    color: white;
+    text-shadow: 3px 0px rgba(0, 0, 0, 0.363);
+    padding: 10px;
+}
