--- a/media-queries/mq4/estilos/style.css
+++ b/media-queries/mq4/estilos/style.css
@@ -1,1 +1,40 @@
 @charset "utf-8";
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+*{
+    font-family: 'Work Sans', Arial, Helvetica, sans-serif;
+    font-size: 1.3em;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    background: black url(../imagens/back-phone.jpg) no-repeat center;
+    background-size: cover;
+    height: 100vh;
+}
+
+main{
+    background-color: rgba(255, 255, 255, 0.726);
+    width: 90vw;
+    margin: auto;
+    margin-top: 10px;
+    border-radius: 10px;
+    padding: 10px;
+}
+h1{
+    text-align: center;
+    font-weight: 400;
+    text-shadow: 2px 1px 2px rgb(126, 126, 126);
+}
+img{
+    display: block;
+    margin: auto;
+}
+img#phone { display: block;}
+img#tablet { display: none;}
+img#print { display: none;}
+img#pc { display: none;}
+img#tv { display: none;}
+
+
