--- a/media-queries/mq4/estilos/media-queries.css
+++ b/media-queries/mq4/estilos/media-queries.css
@@ -1,1 +1,48 @@
 @charset "utf-8";
+
+/* Telas médias (landscape tablets, 768px and up) */
+@media screen and (min-width: 768px){
+    body{
+        background-image: url(../imagens/back-tablet.jpg);
+    }
+    img#phone { display: none;}
+    img#tablet { display: block;}
+    img#print { display: none;}
+    img#pc { display: none;}
+    img#tv { display: none;}
+}
+
+/* Grandes telas (laptops/desktops, 992px and up) */
+@media screen and (min-width: 992px){
+    body{
+        background-image: url(../imagens/back-pc.jpg);
+    }
+    img#phone { display: none;}
+    img#tablet { display: none;}
+    img#print { display: none;}
+    img#pc { display: block;}
+    img#tv { display: none;}
+
+}
+
+/* Telas extra grandes (large laptops and desktops, 1200px and up)*/
+@media screen and (min-width: 1200px) {
+    body{
+        background-image: url(../imagens/back-tv.jpg);
+    }
+    img#phone { display: none;}
+    img#tablet { display: none;}
+    img#print { display: none;}
+    img#pc { display: none;}
+    img#tv { display: block;}
+}
+@media print{
+    body{
+        background-image: url(../imagens/back-print.jpg);
+    }
+    img#phone { display: none;}
+    img#tablet { display: none;}
+    img#print { display: block;}
+    img#pc { display: none;}
+    img#tv { display: none;}
+}
