--- a/media-queries/mq4/estilos/style.css
+++ b/media-queries/mq4/estilos/style.css
@@ -9,7 +9,7 @@
 }
 
 body{
-    background: black url(../imagens/back-phone.jpg) no-repeat center;
+    background: rgb(255, 255, 255) url(../imagens/back-phone.jpg) no-repeat center;
     background-size: cover;
     height: 100vh;
 }
