--- a/media-queries/mq5/estilos/style.css
+++ b/media-queries/mq5/estilos/style.css
@@ -48,7 +48,7 @@ header li:hover{
     background-color: rgb(126, 126, 126);
 }
 main{
-   margin: 50px; 
+   margin: 30px; 
    background-color: white;
    border-radius: 10px;
    padding: 30px;
@@ -60,5 +60,6 @@ main p{
     text-indent: 20px;
     line-height: 20px;
     margin-bottom: 20px;
+    text-align: justify;
 }
 
