configurações para telas maiores

--- a/media-queries/mq5/estilos/mq.css
+++ b/media-queries/mq5/estilos/mq.css
@@ -16,4 +16,9 @@
     header li{
         display: inline;
     }
+    main{
+        max-width: 768px;
+        margin: auto;
+        margin-top: 30px;
+    }
 }
