--- a/media-queries/mq6-projeto-login/estilos/style.css
+++ b/media-queries/mq6-projeto-login/estilos/style.css
@@ -1,6 +1,47 @@
 @charset "utf-8";
 
-/* 
-Verde #49a09d
-Lilás #5f2c82
- */
+
+:root {
+    --verde:#49a09d;
+    --lilas:#5f2c82;
+}
+
+*{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+}
+body{
+    background-color: var(--lilas);
+    height: 100vh;
+    width: 100vw;
+}
+main{
+    height: 100vh;
+    width: 100vw;
+    position: relative;
+}
+section#login{
+    background-color: white;
+    width: 80vw;
+    height: 500px;
+    border: solid black 1px;
+    border-radius: 30px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+}
+
+#imagem{
+    background: url(../imagens/imagem-predio.jpg) center bottom no-repeat;
+    background-size: cover;
+    height: 200px;
+    display: block;
+}
+#formulario{
+    display: block;
+    padding: 10px;
+}
