--- a/media-queries/mq6-projeto-login/estilos/style.css
+++ b/media-queries/mq6-projeto-login/estilos/style.css
@@ -28,6 +28,7 @@ section#login{
     max-width: 350px;
     height: 80vh;
     max-height: 550px;
+    min-height: 400px;
     border-radius: 30px;
     position: absolute;
     top: 50%;
@@ -48,4 +49,11 @@ div#imagem{
 div#formulario{
 
     padding: 10px;
+}
+div#formulario h1{
+    text-align: center;
+    margin-bottom: 10px;
+}
+div#formulario > p{
+    font-size: 0.8em;
 }
