--- a/media-queries/mq6-projeto-login/estilos/style.css
+++ b/media-queries/mq6-projeto-login/estilos/style.css
@@ -28,7 +28,7 @@ section#login{
     max-width: 350px;
     height: 80vh;
     max-height: 550px;
-    min-height: 400px;
+    min-height: 450px;
     border-radius: 30px;
     position: absolute;
     top: 50%;
@@ -59,4 +59,47 @@ div#formulario > p{
 }
 .material-symbols-outlined{
     transform: translateY(8px);
+    font-size: 1.5em;
+}
+
+.campo{
+    width: 100%;
+    display: block;
+    height: 40px;
+    text-align: center;
+}
+.campo > label{
+    display: none;
+
+}
+input[type=submit]{
+    display: block;
+    width: 100%;
+    height: 30px;
+    background-color: var(--verde);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1em;
+    color: white;
+    margin: 10px 0px;
+}
+input{
+    width: 40%;
+}
+input[type=submit]:hover{
+    background-color: #367976;
+}
+.botao{
+    display: block;
+    text-align: center;
+    height: 30px;
+    font-size: 1em;
+    border-radius: 10px;
+    border: 1px solid #58c2be;
+    color: #367976;
+    background-color: white;
+}
+.botao:hover{
+    background-color: #58c2be;
 }
