--- a/media-queries/mq6-projeto-login/estilos/style.css
+++ b/media-queries/mq6-projeto-login/estilos/style.css
@@ -32,7 +32,7 @@ section#login{
     top: 50%;
     left: 50%;
     overflow: hidden;
-    
+
     transform: translate(-50%, -50%);
     transition: width .3s, height .3s;
     transition-timing-function: ease;
@@ -79,7 +79,7 @@ input{
     border-radius: 10px;
     border: none;
     padding-left: 3px;
-    transform: translateY(1px);
+    transform: translate(4px, 2px);
     
 }
 input[type=submit]{
